--- a/pruebafinal/src/views/RegistroView.fxml
+++ b/pruebafinal/src/views/RegistroView.fxml
@@ -67,7 +67,7 @@
                 <Label GridPane.columnIndex="4" GridPane.rowIndex="4" />
                 <TextArea fx:id="notasArea" prefHeight="192.0" prefWidth="502.0" GridPane.columnIndex="5" GridPane.columnSpan="3" GridPane.rowIndex="4"
                           editable="false" focusTraversable="false" />
-                <ImageView fx:id="imageView" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+                <ImageView fx:id="fingerprintImageView" GridPane.columnIndex="0" GridPane.columnSpan="3" GridPane.rowIndex="5" />
                 <Button fx:id="ingresarHuellaButton" onAction="#handleIngresarHuellaButton" prefHeight="26.0" prefWidth="179.0" text="Presionar para ingresar huella" GridPane.columnIndex="6" GridPane.rowIndex="5" />
 
                 <HBox alignment="CENTER" spacing="10" GridPane.columnIndex="0" GridPane.columnSpan="8" GridPane.rowIndex="6">
