--- a/pruebafinal/src/views/RegistroView.fxml
+++ b/pruebafinal/src/views/RegistroView.fxml
@@ -21,71 +21,82 @@
 
         <!-- Centro del layout, con el formulario -->
         <center>
-            <AnchorPane>
-                <VBox prefWidth="1409.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
-                    <GridPane hgap="10" minHeight="0" vgap="0" AnchorPane.leftAnchor="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
-                        <columnConstraints>
-                            <!-- Configuración de las columnas: Ampliar el ancho de las columnas -->
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
-                            <ColumnConstraints />
-                            <ColumnConstraints />
-                        </columnConstraints>
-                        <rowConstraints>
-                            <!-- Configuración de las filas -->
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                            <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                     <RowConstraints minHeight="0.0" prefHeight="40.0" />
-                        </rowConstraints>
+            <ScrollPane fitToHeight="true" fitToWidth="true" pannable="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <content>
+                    <VBox prefWidth="1409.0">
+                        <GridPane hgap="10" minHeight="0" vgap="10.0" VBox.vgrow="ALWAYS">
+                            <columnConstraints>
+                                <!-- Configuración de las columnas: Ampliar el ancho de las columnas -->
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints minWidth="150.0" prefWidth="400.0" />
+                                <ColumnConstraints />
+                                <ColumnConstraints />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <!-- Configuración de las filas -->
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                                <RowConstraints minHeight="0.0" prefHeight="40.0" />
+                            </rowConstraints>
 
-                        <Label text="Nombre/s" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                        <TextField fx:id="nombreField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                        <Label text="Apellido Materno" GridPane.columnIndex="4" />
-                        <TextField fx:id="apellidoMaternoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" />
-                        <Label text="Apellido Paterno" GridPane.columnIndex="2" />
-                        <TextField fx:id="apellidoPaternoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" />
-                        <Label text="Fecha de nacimiento" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <DatePicker fx:id="fechaNacimientoPicker" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label text="País" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <TextField fx:id="paisField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Label text="Ciudad" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                        <TextField fx:id="ciudadField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                        <Label text="Correo electrónico" GridPane.rowIndex="4" />
-                        <TextField fx:id="emailField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label text="Lada" GridPane.rowIndex="3" />
-                        <TextField fx:id="ladaField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label text="Teléfono" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <TextField fx:id="telefonoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <Label text="RFC" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                        <TextField fx:id="rfcField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                        <Label text="CURP" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                        <TextField fx:id="curpField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                        <Label text="Profesión" GridPane.rowIndex="6" />
-                        <TextField fx:id="profesionField" prefHeight="25.0" prefWidth="772.0" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+                            <Label text="Nombre/s" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                            <TextField fx:id="nombreField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                            <Label text="Apellido Materno" GridPane.columnIndex="4" />
+                            <TextField fx:id="apellidoMaternoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" />
+                            <Label text="Apellido Paterno" GridPane.columnIndex="2" />
+                            <TextField fx:id="apellidoPaternoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" />
+                            <Label text="Fecha de nacimiento" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                            <DatePicker fx:id="fechaNacimientoPicker" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                            <Label text="País" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                            <TextField fx:id="paisField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                            <Label text="Ciudad" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                            <TextField fx:id="ciudadField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" GridPane.rowIndex="1" />
 
-                        <Label text="Departamento" GridPane.rowIndex="7" />
-                        <ChoiceBox fx:id="departamentoChoiceBox" minWidth="150" prefWidth="200" style="-fx-font-size: 12px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                            <!-- Separador entre las secciones -->
+                            <Separator style=" -fx-padding: 10 20 10 20;" GridPane.columnSpan="6" GridPane.rowIndex="2" />
 
-                        <Label text="Puesto" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                        <ChoiceBox fx:id="puestoChoiceBox" minWidth="150" prefWidth="200" style="-fx-font-size: 12px;" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+                            <Label text="Correo electrónico" GridPane.rowIndex="4" />
+                            <TextField fx:id="emailField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                            <Label text="Lada" GridPane.rowIndex="3" />
+                            <TextField fx:id="ladaField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                            <Label text="Teléfono" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                            <TextField fx:id="telefonoField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                            <Label text="RFC" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                            <TextField fx:id="rfcField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="5" GridPane.rowIndex="4" />
+                            <Label text="CURP" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                            <TextField fx:id="curpField" prefWidth="200" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="3" GridPane.rowIndex="4" />
 
-                        <Label GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                            <!-- Otro separador entre las secciones -->
+                            <Separator style=" -fx-padding: 10 20 10 20;" GridPane.columnSpan="6" GridPane.rowIndex="5" />
 
-                       <!-- Imagen de la huella dactilar -->
-                       <ImageView fx:id="fingerprintImageView" fitHeight="115.0" fitWidth="450.0" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="7" />
-                    </GridPane>
-                </VBox>
-            </AnchorPane>
+                            <Label text="Profesión" GridPane.rowIndex="6" />
+                            <TextField fx:id="profesionField" prefHeight="25.0" prefWidth="772.0" style="-fx-alignment: CENTER-LEFT;" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
+
+
+                            <Label text="Departamento" GridPane.rowIndex="7" />
+                            <ChoiceBox fx:id="departamentoChoiceBox" minWidth="150" prefWidth="200" style="-fx-font-size: 12px;" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+                            <Label text="Puesto" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                            <ChoiceBox fx:id="puestoChoiceBox" minWidth="150" prefWidth="200" style="-fx-font-size: 12px;" GridPane.columnIndex="3" GridPane.rowIndex="7" />
+
+                            <Label GridPane.columnIndex="4" GridPane.rowIndex="4" />
+
+                            <!-- Imagen de la huella dactilar -->
+                            <ImageView fx:id="fingerprintImageView" fitHeight="115.0" fitWidth="450.0" preserveRatio="true" GridPane.columnIndex="4" GridPane.rowIndex="7" />
+                        </GridPane>
+                    </VBox>
+                </content>
+            </ScrollPane>
         </center>
 
         <!-- Título superior -->
