--- a/pruebafinal/src/views/Auditoria.fxml
+++ b/pruebafinal/src/views/Auditoria.fxml
@@ -17,7 +17,7 @@
                     <!-- Primera fila: Supervisor -->
                     <HBox alignment="CENTER_LEFT" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="0">
                         <Label style="-fx-font-weight: bold;" text="Supervisor" />
-                        <TextField fx:id="userFilterField" promptText="Nombre del supervisor" />
+                        <TextField fx:id="searchField" promptText="Buscar supervisor..." onKeyReleased="#searchForSupervisors" />
                     </HBox>
                     <!-- Segunda fila: Fechas -->
                     <HBox alignment="CENTER_LEFT" spacing="20" GridPane.columnIndex="0" GridPane.rowIndex="1">
@@ -49,6 +49,13 @@
                         </ComboBox>
                         <!-- Botón de Buscar -->
                         <Button fx:id="searchButton" onAction="#validateAndSearch" text="Buscar" />
+                        <!-- Botón portapapeles -->
+                        <VBox alignment="CENTER">
+                            <Button text="Portapapeles" onAction="#copyToClipboard" />
+                        </VBox>
+                        <VBox alignment="CENTER">
+                            <Button fx:id="resetFiltersButton" text="Restablecer Filtros" onAction="#restablecerFiltros" />
+                        </VBox>
                     </HBox>
                     <columnConstraints>
                         <ColumnConstraints />
@@ -71,17 +78,21 @@
                         <TableColumn fx:id="accionColumn" text="Acción" />
                         <TableColumn fx:id="nombreCompletoEmpleado" text="Empleado afectado" />
                         <TableColumn fx:id="timestampColumn" text="Horario" />
-                        <TableColumn fx:id="detallesColumn" text="Detalles" />
+                        <TableColumn fx:id="detallesColumn" text="Detalles"/>
+
                     </columns>
                 </TableView>
             </AnchorPane>
         </center>
         <bottom>
-            <HBox alignment="TOP_CENTER" prefHeight="78.0" prefWidth="1395.0" spacing="15" style="-fx-padding: 10;" AnchorPane.bottomAnchor="10.0" BorderPane.alignment="CENTER">
-                <Button fx:id="previousButton" alignment="TOP_CENTER" contentDisplay="TOP" onAction="#handlePreviousPage" prefWidth="60.0" text="Anterior" />
-                <Label fx:id="currentPageLabel" alignment="CENTER" prefHeight="28.0" prefWidth="174.0" text="Página 1 de N" />
-                <Button fx:id="nextButton" alignment="TOP_CENTER" contentDisplay="TOP" onAction="#handleNextPage" prefHeight="25.0" prefWidth="78.0" text="Siguiente" />
-            </HBox>
+            <AnchorPane minHeight="25.0">
+                <HBox alignment="CENTER" spacing="10" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="3.0">
+                    <ChoiceBox fx:id="itemsPerPageChoiceBox" prefWidth="100.0" />
+                    <Button fx:id="previousButton" text="Anterior" onAction="#handlePreviousPage" />
+                    <HBox fx:id="paginationBox" alignment="CENTER" spacing="5.0" />
+                    <Button fx:id="nextButton" text="Siguiente" onAction="#handleNextPage" />
+                </HBox>
+            </AnchorPane>
         </bottom>
     </BorderPane>
 </AnchorPane>
