--- a/pruebafinal/src/views/Permisos.fxml
+++ b/pruebafinal/src/views/Permisos.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="443.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="443.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx/fxml/1">
     <children>
         <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -16,27 +16,60 @@
             </top>
             <center>
                 <ScrollPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" BorderPane.alignment="CENTER">
-               <content>
-                  <Accordion>
-                    <panes>
-                      <TitledPane animated="false" text="untitled 1">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                        </content>
-                      </TitledPane>
-                      <TitledPane animated="false" text="untitled 2">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                        </content>
-                      </TitledPane>
-                      <TitledPane animated="false" text="untitled 3">
-                        <content>
-                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                        </content>
-                      </TitledPane>
-                    </panes>
-                  </Accordion>
-               </content>
+                    <content>
+                        <Accordion prefHeight="256.0" prefWidth="658.0">
+                            <panes>
+                                <!-- TitledPane 1: Registro -->
+                                <TitledPane animated="false" text="Registro">
+                                    <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                            <children>
+                                                <VBox alignment="CENTER" spacing="10">
+                                                    <children>
+                                                        <CheckBox text="Si el supervisor puede registrar más empleados" />
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </AnchorPane>
+                                    </content>
+                                </TitledPane>
+
+                                <!-- TitledPane 2: Gestión de empleados -->
+                                <TitledPane animated="false" text="Gestión de empleados">
+                                    <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                            <children>
+                                                <VBox alignment="CENTER" spacing="10">
+                                                    <children>
+                                                        <CheckBox text="Si el supervisor puede editar empleados" />
+                                                        <CheckBox text="Si el supervisor puede editar la huella" />
+                                                        <CheckBox text="Si el supervisor puede cambiar un Estatus al empleado" />
+                                                        <CheckBox text="Si el supervisor puede dar de baja empleados" />
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </AnchorPane>
+                                    </content>
+                                </TitledPane>
+
+                                <!-- TitledPane 3: Monitoreo -->
+                                <TitledPane animated="false" text="Monitoreo">
+                                    <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                            <children>
+                                                <VBox alignment="CENTER" spacing="10">
+                                                    <children>
+                                                        <CheckBox text="Si puede editar su tipo de asistencia" />
+                                                        <CheckBox text="Si el supervisor puede editar la nota" />
+                                                    </children>
+                                                </VBox>
+                                            </children>
+                                        </AnchorPane>
+                                    </content>
+                                </TitledPane>
+                            </panes>
+                        </Accordion>
+                    </content>
                 </ScrollPane>
             </center>
         </BorderPane>
