--- a/pruebafinal/src/views/Permisos.fxml
+++ b/pruebafinal/src/views/Permisos.fxml
@@ -35,7 +35,7 @@
                 </ScrollPane>
             </center>
 
-            <!-- Botones de aplicar cambios y deshacer cambioss -->
+            <!-- Botones de aplicar cambios y deshacer cambiosss -->
             <bottom>
                 <HBox alignment="CENTER" spacing="10" BorderPane.alignment="CENTER">
                     <Button fx:id="applyChangesButton" text="Aplicar cambios" onAction="#applyChanges" />
