--- a/pruebafinal/src/views/Permisos.fxml
+++ b/pruebafinal/src/views/Permisos.fxml
@@ -40,7 +40,7 @@
                 </ScrollPane>
             </center>
 
-            <!-- Botones de aplicar cambios y deshacer cambioss -->
+            <!-- Botones de aplicar cambios y deshacer cambios -->
             <bottom>
                 <AnchorPane minHeight="45.0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <HBox alignment="CENTER" spacing="10" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
